--- a/best-beauty-app/src/Pages/Products_Page/Products.css
+++ b/best-beauty-app/src/Pages/Products_Page/Products.css
@@ -20,7 +20,7 @@
     color:rgb(135, 97, 0);
     background-color: rgb(254,205,77, 0.8);
 }
-.catagory-links{
+.category-links{
     text-decoration: none;
     color: rgb(27,27,25);
 }
